okienko logowania plus okienko pracownika

--- a/src/ztm_app/PocztyJFrame.form
+++ b/src/ztm_app/PocztyJFrame.form
@@ -89,6 +89,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Refresh"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="RefreshButtonActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
