--- a/src/ztm_app/basicApp.form
+++ b/src/ztm_app/basicApp.form
@@ -102,11 +102,6 @@
       </SubComponents>
     </Container>
     <Container class="javax.swing.JPanel" name="bottomPanel">
-      <AccessibilityProperties>
-        <Property name="AccessibleContext.accessibleParent" type="javax.accessibility.Accessible" editor="org.netbeans.modules.form.ComponentChooserEditor">
-          <ComponentRef name="default"/>
-        </Property>
-      </AccessibilityProperties>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -174,11 +169,6 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Dane osobowe"/>
           </Properties>
-          <AccessibilityProperties>
-            <Property name="AccessibleContext.accessibleParent" type="javax.accessibility.Accessible" editor="org.netbeans.modules.form.ComponentChooserEditor">
-              <ComponentRef name="default"/>
-            </Property>
-          </AccessibilityProperties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="personalDataButtonActionPerformed"/>
           </Events>
@@ -190,11 +180,6 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Wynagrodzenia"/>
           </Properties>
-          <AccessibilityProperties>
-            <Property name="AccessibleContext.accessibleParent" type="javax.accessibility.Accessible" editor="org.netbeans.modules.form.ComponentChooserEditor">
-              <ComponentRef name="default"/>
-            </Property>
-          </AccessibilityProperties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="salaryButtonActionPerformed"/>
           </Events>
@@ -206,11 +191,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Stanowisko"/>
           </Properties>
-          <AccessibilityProperties>
-            <Property name="AccessibleContext.accessibleParent" type="javax.accessibility.Accessible" editor="org.netbeans.modules.form.ComponentChooserEditor">
-              <ComponentRef name="default"/>
-            </Property>
-          </AccessibilityProperties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="stanowiskoButtonActionPerformed"/>
+          </Events>
         </Component>
         <Container class="javax.swing.JScrollPane" name="tablePane">
 
