--- a/src/ztm_app/adminWindow.form
+++ b/src/ztm_app/adminWindow.form
@@ -249,6 +249,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Usu&#x144;"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="DeleteButtonActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
