--- a/src/ztm_app/FormularzPracownicy.form
+++ b/src/ztm_app/FormularzPracownicy.form
@@ -109,7 +109,7 @@
                                                   <Component id="nrPracownikaLabel" min="-2" max="-2" attributes="0"/>
                                                   <EmptySpace min="-2" pref="7" max="-2" attributes="0"/>
                                                   <Component id="imieLabel" min="-2" max="-2" attributes="0"/>
-                                                  <EmptySpace max="-2" attributes="0"/>
+                                                  <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
                                                   <Group type="103" groupAlignment="1" attributes="0">
                                                       <Group type="102" alignment="1" attributes="0">
                                                           <Group type="103" groupAlignment="1" attributes="0">
@@ -118,7 +118,6 @@
                                                                       <Group type="102" alignment="1" attributes="0">
                                                                           <Group type="103" groupAlignment="0" attributes="0">
                                                                               <Group type="102" alignment="1" attributes="0">
-                                                                                  <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
                                                                                   <Group type="103" groupAlignment="0" attributes="0">
                                                                                       <Group type="102" alignment="1" attributes="0">
                                                                                           <Component id="nazwiskoLabel" min="-2" max="-2" attributes="0"/>
@@ -290,6 +289,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Commit"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="commitButtonActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
