--- a/src/ztm_app/adminWindow.form
+++ b/src/ztm_app/adminWindow.form
@@ -76,8 +76,8 @@
                           <Component id="userNameLabel" min="-2" pref="336" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace pref="416" max="32767" attributes="0"/>
-                  <Component id="logOutButton" min="-2" pref="117" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="411" max="-2" attributes="0"/>
+                  <Component id="logOutButton" min="-2" pref="137" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -92,8 +92,8 @@
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace min="0" pref="21" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="logOutButton" min="-2" pref="33" max="-2" attributes="0"/>
                       <Component id="userNameLabel" min="-2" pref="56" max="-2" attributes="0"/>
+                      <Component id="logOutButton" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
           </Group>
@@ -185,6 +185,7 @@
           <SubComponents>
             <Component class="javax.swing.JTable" name="mainTable2">
               <Properties>
+                <Property name="autoCreateRowSorter" type="boolean" value="true"/>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="4" rowCount="4">
                     <Column editable="true" title="Title 1" type="java.lang.Object"/>
@@ -194,6 +195,9 @@
                   </Table>
                 </Property>
                 <Property name="autoResizeMode" type="int" value="4"/>
+                <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+                  <Color id="Default Cursor"/>
+                </Property>
               </Properties>
             </Component>
           </SubComponents>
