--- a/src/ztm_app/adminWindow.form
+++ b/src/ztm_app/adminWindow.form
@@ -207,7 +207,7 @@
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="3">
                 <StringItem index="0" value="Pracownicy"/>
-                <StringItem index="1" value="Zarzad"/>
+                <StringItem index="1" value="Poczty"/>
                 <StringItem index="2" value="Wynagrodzenia"/>
               </StringArray>
             </Property>
